# Tubes2_CNNRNN

./: .gitignore  README.md  plan.md  pyproject.toml
artifacts/captioning/: vocabulary.json
artifacts/captioning/weights/: lstm-L1-U128_history.json  lstm-L1-U512_history.json  lstm-L2-U128_history.json  lstm-L2-U512_history.json  lstm-L3-U128_history.json  lstm-L3-U512_history.json  rnn-L1-U128_history.json  rnn-L1-U512_history.json  rnn-L2-U128_history.json  rnn-L2-U512_history.json  rnn-L3-U128_history.json  rnn-L3-U512_history.json
artifacts/cnn/: dataset_index.csv  labels.json
artifacts/cnn/configs/: cnn_c2_f32-64_k3-3_max.json  cnn_c2_f32-64_k3-3_max_non_shared.json
artifacts/cnn/histories/: cnn_c2_f32-64_k3-3_average.json  cnn_c2_f32-64_k3-3_max.json  cnn_c2_f32-64_k3-3_max_non_shared.json  cnn_c2_f32-64_k5-3_average.json  cnn_c2_f32-64_k5-3_max.json  cnn_c2_f64-128_k3-3_average.json  cnn_c2_f64-128_k3-3_max.json  cnn_c2_f64-128_k5-3_average.json  cnn_c2_f64-128_k5-3_max.json  (+8 more)
scripts/: audit_artifacts.py  generate_report_tables.py  validate_figures.py
src/captioning/: __init__.py  build_vocab.py  data_generator.py  feature_extractor.py  prepare_dataset.py  train.py
src/cnn/: __init__.py  configs.py  evaluation.py  layers.py  models.py  preprocessing.py  training.py
src/common/: __init__.py  dense.py  io.py  paths.py  plotting.py  seed.py
src/experiments/: evaluate_cnn.py  train_cnn.py
src/notebooks/: CNN_Training_Experiment_and_Evaluations.ipynb
src/scratch/: __init__.py  cnn_inference.py
tests/: test_audit_artifacts.py  test_common_io.py
(+56 files in other folders)
