[project]
name = "tubes2-cnnrnn"
version = "0.1.0"
description = "CNN and RNN/LSTM image learning project with uv-managed tooling."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "keras>=3.9.0",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.1.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
